--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,12 @@ openai = "^1.35.5"
 pyyaml = "^6.0.1"
 dumbo-asp = "^0.3.8"
 
+[tool.poetry.scripts]
+llmasp = "llmasp.main:main"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
